--- a/NSEWikiFrontEnd/sourcecode/assetsrepository/LetsGetStarted.html
+++ b/NSEWikiFrontEnd/sourcecode/assetsrepository/LetsGetStarted.html
@@ -38,7 +38,7 @@
 						</ul><!-- end of ul class -->
 
 							<ul class="nav navbar-nav navbar-right pull-right">
-								<li><a href="C:\Users\admin\Desktop\Prathamesh_Dev\NSEWiki\Course Files\02 - Starter Assets\WhatsThisFile.html"><span class="glyphicon glyphicon-fire"></span>   What's This ?</a></li>
+								<li><a href="C:\Users\admin\Desktop\Prathamesh_Dev\NSEWiki\Course Files\02 - Starter Assets\whatsthisfile.html"><span class="glyphicon glyphicon-fire"></span>   What's This ?</a></li>
 								<li><a href="#">Lets Get Started ...</a></li>
 								<li><a href="#">Be a part of it  !</a></li>
 								<li><a href="#">Log in</a></li>
