--- a/NSEWikiFrontEnd/sourcecode/assetsrepository/NSEWiki.html
+++ b/NSEWikiFrontEnd/sourcecode/assetsrepository/NSEWiki.html
@@ -5,7 +5,7 @@
 		
 		<!-- Website Title & Description for Search Engine purposes -->
 		<meta name="description" content="">
-	        <title>NSEWiki</title>	
+	        <title>NSETECHWiki</title>
 		<!-- Mobile viewport optimized -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		
